- Added ability to set the working directory that is used when a command is executed.